Bug 511281 - plasmashell/kwin_wayland 6.5.0 restarting on mouse move with external monitor plugged in
Summary: plasmashell/kwin_wayland 6.5.0 restarting on mouse move with external monitor...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: 6.5.0
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: multiscreen
Depends on:
Blocks:
 
Reported: 2025-10-28 18:53 UTC by Jami Kettunen
Modified: 2025-10-29 13:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.2
Sentry Crash Report:


Attachments
All output from "startplasma-wayland" launched from tty1 until eventual exit code 0 (42.84 KB, text/x-log)
2025-10-28 18:53 UTC, Jami Kettunen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jami Kettunen 2025-10-28 18:53:45 UTC
Created attachment 186267 [details]
All output from "startplasma-wayland" launched from tty1 until eventual exit code 0

SUMMARY
With HDMI/DP external monitor(s) plugged in kwin_wayland 6.5.0 on my Snapdragon X Elite ARM64 Asus Vivobook S 15 laptop is unusable: everything looks fine on both monitors without cursor initially if I do nothing, but as soon as I move the mouse even a bit on the built-in display plasmashell disappears and doesn't come back until another SDDM relogin/startplasma-wayland invocation while kwin_wayland is seemingly restarted by kwin_wayland_wrapper.

Sometimes in this second state one frame with the cursor visible on a black background will be stuck on my built-in display and the I can blindly move it fine to my HDMI/DP display, until causing kwin_wayland to close/restart if I try the top-left hot corner. I can only get startplasma-wayland to give up exiting with code 0 if I make the shell quickly crash 5 times in a row by moving my mouse about while it's launching. There's no coredumps or dmesg logs after launching "startplasma-wayland" from a TTY or otherwise.

I already bisected this to https://invent.kde.org/plasma/kwin/-/commit/ecff9f9467 (backends/drm: remove the cursor plane from crtcs). There's nothing output to dmesg post-launch but I could share it too if potentially interesting. Downgrading back to 6.4.5 resolves the issue

With another display I had config as "disable built-in display but keep the external one" and that also is fine in the currently broken kwin 6.5.0, it's just the extended/whatever multi-display case which is completely broken.

STEPS TO REPRODUCE
1. Log into Plasma desktop 6.5.0 on an Asus Vivobook S 15 (Snapdragon X Elite) ARM64 laptop with HDMI (initially or later) plugged in

OBSERVED RESULT
plasmashell & kwin_wayland close on just about any interaction making the mouse visible/move (specifically on the built-in display?)

EXPECTED RESULT
Everything works just fine with only built-in display or external monitors plugged in

SOFTWARE/OS VERSIONS
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Chimera Linux aarch64
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
My kernel tree is https://github.com/SpieringsAE/linux/tree/wip/x1e80100-6.17-rc6 cleanly rebased on https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/tag/?h=v6.17.5 running https://paste.c-net.org/knyfhwbpghmy as .config if interesting
Comment 1 Bug Janitor Service 2025-10-28 19:12:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8324
Comment 2 Zamundaaa 2025-10-29 11:35:42 UTC
Git commit 769f7981228a63417216e25e4cda8f763a268afe by Xaver Hugl.
Committed on 29/10/2025 at 10:58.
Pushed by zamundaaa into branch 'master'.

backends/drm: prevent using the same cursor plane on multiple screens

Some drivers make cursor planes compatible with all CRTCs, so we need to
take that into account.

M  +8    -4    src/backends/drm/drm_gpu.cpp

https://invent.kde.org/plasma/kwin/-/commit/769f7981228a63417216e25e4cda8f763a268afe
Comment 3 Zamundaaa 2025-10-29 13:43:26 UTC
Git commit bc8f713a947f2b9f8cd60104c30fe730701cbc49 by Xaver Hugl.
Committed on 29/10/2025 at 12:43.
Pushed by zamundaaa into branch 'Plasma/6.5'.

backends/drm: prevent using the same cursor plane on multiple screens

Some drivers make cursor planes compatible with all CRTCs, so we need to
take that into account.


(cherry picked from commit 769f7981228a63417216e25e4cda8f763a268afe)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +8    -4    src/backends/drm/drm_gpu.cpp

https://invent.kde.org/plasma/kwin/-/commit/bc8f713a947f2b9f8cd60104c30fe730701cbc49