backends/drm: prevent using the same cursor plane on multiple screens

Some drivers make cursor planes compatible with all CRTCs, so we need to
take that into account.

BUG: 511281